# fpga-signal-filter

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/: API.md  ARCHITECTURE.md  COEFFICIENTS.md
examples/: bandpass_demo.py  lowpass_demo.py  noise_removal.py
scripts/: generate_hdl.py  plot_response.py
src/: __init__.py  cic_filter.py  coefficient_gen.py  filter_chain.py  fir_filter.py  iir_filter.py  moving_average.py  utils.py
tests/: test_cic.py  test_fir.py  test_iir.py  test_integration.py  test_moving_avg.py
